# tinkoff-kval-bot

./: .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  client.py
brokers/: __init__.py
common/: __init__.py  helpers.py
config/: __init__.py  contribution_plan.example.json  fundamental_filter.example.yaml  income_engine.example.yaml  income_universe.example.yaml  income_universe_rules.example.yaml  instrument_candidates.example.yaml  settings.py
docs/: ai_review_playbook.md  contribution_plan.md  dashboard.md  income_coupon_validation.md  income_floating_coupon_policy.md  income_live_execute.md  income_live_fill_attribution_report.md  income_live_fill_economics_report.md  income_live_income_validation_report.md  income_live_order_status.md  income_live_position_report.md  income_live_readiness.md  income_order_preview.md  income_owner_decision_report.md  income_resolver_mapping_diagnostics.md  income_sandbox_account.md  income_sandbox_execution.md  income_universe_audit.md  income_universe_builder.md  portfolio_dashboard.md  portfolio_dashboard_data.md
modules/: __init__.py  balance.py  contribution_plan.py  execution_planner.py  execution_preflight.py  floating_coupon_policy.py  fundamental_filter.py  income_audit.py  income_coupon_validation.py  income_engine.py  income_live_execution.py  income_live_fill_attribution.py  income_live_fill_economics.py  income_live_income_validation.py  income_live_position.py  income_live_readiness.py  income_live_status.py  (+24 more)
(+76 files in other folders)
