[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinkoff-kval-bot"
version = "0.1.0"
description = "T-Invest Qualification Tracker — расчёт прогресса к статусу квалифицированного инвестора по обороту (read-only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
